--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,5 +1,5 @@
 // http://stackoverflow.com/questions/9350818
-@media screen and (min-width:1025px) {
+@media screen and (min-width:1089px) {
 .sidebar-nav-fixed {
     padding: 9px 9px 9px 0px;
     position:fixed;
@@ -72,7 +72,7 @@
 
 }
 
-@media screen and (max-width:1024px) {
+@media screen and (max-width:1089px) {
 .sidebar-nav-fixed {
     padding: 9px 9px 9px 0px;
     position: fixed;
